--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "classnames": "^2.3.1",
+    "rc-slider": "9.7.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-imgix": "^9.3.0",
     "react-loader-spinner": "^4.0.0",
+    "react-redux": "^8.0.1",
     "react-responsive-carousel": "^3.2.22",
     "react-scripts": "4.0.3",
+    "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
     "web-vitals": "^1.0.1"
   },
